--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xeno Escape</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
     <style>
-        body { margin: 0; overflow: hidden; }
+        body { margin: 0; }
         canvas { display: block; }
     </style>
 </head>
@@ -15,15 +15,14 @@
 <script>
     let config = {
         type: Phaser.AUTO,
-        width: window.innerWidth,
-        height: window.innerHeight,
+        width: 800,
+        height: 600,
         physics: { default: 'arcade', arcade: { gravity: { y: 0 } } },
         scene: { preload, create, update }
     };
 
     let player, xeno, cursors, key, exitZone, hasKey = false, gameOver = false, gameStarted = false;
     let startButton, restartButton, exitDoor;
-    let moveLeft, moveRight, moveUp, moveDown;
 
     let game = new Phaser.Game(config);
 
@@ -34,40 +33,38 @@
         this.load.image('key', 'https://i.imgur.com/9O6wVf2.png');
         this.load.image('door', 'https://i.imgur.com/x6IwtVn.png');
         this.load.image('button', 'https://i.imgur.com/x5024YT.png');
-        this.load.image('restart', 'https://i.imgur.com/xTWO6ha.png');
-        this.load.image('control', 'https://i.imgur.com/ShlmCpl.png'); // On-screen control button
+        this.load.image('restart', 'https://i.imgur.com/xTWO6ha.png'); // Restart button image
     }
 
     function create() {
-        this.add.image(config.width / 2, config.height / 2, 'background')
-            .setScale(Math.max(config.width / 800, config.height / 600));
+        this.add.image(400, 300, 'background');
 
-        startButton = this.add.image(config.width / 2, config.height / 2, 'button').setInteractive();
+        startButton = this.add.image(400, 300, 'button').setInteractive();
         startButton.setScale(0.5);
         startButton.on('pointerdown', startGame, this);
 
-        player = this.physics.add.sprite(100, config.height / 2, 'player');
+        player = this.physics.add.sprite(100, 300, 'player');
         player.setScale(0.2);
         player.setCollideWorldBounds(true);
         player.body.setSize(player.width * 0.5, player.height * 0.5);
         player.setVisible(false);
 
-        xeno = this.physics.add.sprite(config.width - 100, config.height / 2, 'xeno');
+        xeno = this.physics.add.sprite(700, 300, 'xeno');
         xeno.setScale(0.2);
         xeno.setCollideWorldBounds(true);
         xeno.body.setSize(xeno.width * 0.5, xeno.height * 0.5);
         xeno.setVisible(false);
 
-        key = this.physics.add.sprite(Phaser.Math.Between(100, config.width - 100), Phaser.Math.Between(100, config.height - 100), 'key');
+        key = this.physics.add.sprite(Phaser.Math.Between(100, 700), Phaser.Math.Between(100, 500), 'key');
         key.setScale(0.2);
         key.setVisible(false);
 
-        exitDoor = this.add.image(config.width - 50, config.height / 2, 'door');
+        exitDoor = this.add.image(750, 300, 'door');
         exitDoor.setScale(0.5);
         exitDoor.setVisible(false);
 
-        exitZone = this.physics.add.sprite(config.width - 50, config.height / 2, null).setOrigin(0.5);
-        exitZone.setSize(50, config.height);
+        exitZone = this.physics.add.sprite(750, 300, null).setOrigin(0.5);
+        exitZone.setSize(50, 600);
         exitZone.setVisible(false);
 
         this.physics.add.overlap(player, key, collectKey, null, this);
@@ -76,32 +73,6 @@
         cursors = this.input.keyboard.createCursorKeys();
 
         this.physics.add.collider(player, xeno, gameOverHandler, null, this);
-
-        if (!this.sys.game.device.os.desktop) {
-            createMobileControls(this);
-        }
-    }
-
-    function createMobileControls(scene) {
-        moveLeft = scene.add.image(70, config.height - 100, 'control').setInteractive().setAlpha(0.5);
-        moveLeft.setScale(0.5);
-        moveLeft.on('pointerdown', () => player.setVelocityX(-200));
-        moveLeft.on('pointerup', () => player.setVelocityX(0));
-
-        moveRight = scene.add.image(170, config.height - 100, 'control').setInteractive().setAlpha(0.5);
-        moveRight.setScale(0.5);
-        moveRight.on('pointerdown', () => player.setVelocityX(200));
-        moveRight.on('pointerup', () => player.setVelocityX(0));
-
-        moveUp = scene.add.image(config.width - 150, config.height - 150, 'control').setInteractive().setAlpha(0.5);
-        moveUp.setScale(0.5);
-        moveUp.on('pointerdown', () => player.setVelocityY(-200));
-        moveUp.on('pointerup', () => player.setVelocityY(0));
-
-        moveDown = scene.add.image(config.width - 150, config.height - 50, 'control').setInteractive().setAlpha(0.5);
-        moveDown.setScale(0.5);
-        moveDown.on('pointerdown', () => player.setVelocityY(200));
-        moveDown.on('pointerup', () => player.setVelocityY(0));
     }
 
     function startGame() {
@@ -117,20 +88,18 @@
     function update() {
         if (gameOver || !gameStarted) return;
 
-        if (this.sys.game.device.os.desktop) {
-            player.setVelocity(0);
+        player.setVelocity(0);
 
-            if (cursors.left.isDown) {
-                player.setVelocityX(-200);
-            } else if (cursors.right.isDown) {
-                player.setVelocityX(200);
-            }
+        if (cursors.left.isDown) {
+            player.setVelocityX(-200);
+        } else if (cursors.right.isDown) {
+            player.setVelocityX(200);
+        }
 
-            if (cursors.up.isDown) {
-                player.setVelocityY(-200);
-            } else if (cursors.down.isDown) {
-                player.setVelocityY(200);
-            }
+        if (cursors.up.isDown) {
+            player.setVelocityY(-200);
+        } else if (cursors.down.isDown) {
+            player.setVelocityY(200);
         }
 
         moveXeno();
@@ -144,7 +113,7 @@
     }
 
     function showRestartButton(scene) {
-        restartButton = scene.add.image(config.width / 2, config.height / 2 + 100, 'restart').setInteractive();
+        restartButton = scene.add.image(400, 400, 'restart').setInteractive();
         restartButton.setScale(0.5);
         restartButton.on('pointerdown', () => {
             hasKey = false;
@@ -156,7 +125,7 @@
 
     function gameOverHandler() {
         gameOver = true;
-        this.add.text(config.width / 2 - 100, config.height / 2 - 50, 'GAME OVER', { fontSize: '48px', fill: '#ff0000' });
+        this.add.text(300, 250, 'GAME OVER', { fontSize: '48px', fill: '#ff0000' });
         this.physics.pause();
         showRestartButton(this);
     }
@@ -169,12 +138,12 @@
 
     function playerWins() {
         if (hasKey) {
-            this.add.text(config.width / 2 - 100, config.height / 2 - 50, 'YOU WIN!', { fontSize: '48px', fill: '#00ff00' });
+            this.add.text(300, 250, 'YOU WIN!', { fontSize: '48px', fill: '#00ff00' });
             this.physics.pause();
             gameOver = true;
             showRestartButton(this);
         } else {
-            this.add.text(config.width / 2 - 100, config.height / 2 + 50, 'Find the Key First!', { fontSize: '24px', fill: '#ffff00' });
+            this.add.text(300, 250, 'Find the Key First!', { fontSize: '24px', fill: '#ffff00' });
         }
     }
 </script>
