--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         player.setVisible(true);
         xeno.setVisible(true);
         key.setVisible(true);
-        exitZone.setVisible(true);
+        exitZone.setVisible(false);
         exitDoor.setVisible(true);
     }
 
